<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		<TextView
			android:id="@+id/lbl_cliente"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_pedido_cliente" />
	        
		<Spinner
			android:id="@+id/sel_cliente"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/str_pedido_cliente">
			<requestFocus />
		</Spinner>
	</LinearLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/lbl_fecha"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/str_pedido_fecha" />
	    
	    <EditText
	        android:id="@+id/txt_fecha"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        android:inputType="date"/>   
	</LinearLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    <CheckBox
	    android:id="@+id/check_entregado"
	    android:layout_height="wrap_content"
	    android:text="@string/str_pedido_entregado"
	    android:layout_width="match_parent"/>
    </LinearLayout>
    
      <TextView
			android:id="@+id/lbl_add_detalle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/str_pedido_add_detalle" />
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <TextView
			android:id="@+id/lbl_producto"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_pedido_producto" />
	        
		<Spinner
			android:id="@+id/sel_producto"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/str_pedido_producto">
		</Spinner>
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		<TextView
			android:id="@+id/lbl_cantidad"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_pedido_cantidad" />
		
		<EditText
		    android:id="@+id/txt_cantidad"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="number"
		    android:singleLine="true" />
	</LinearLayout>
	
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		<TextView
			android:id="@+id/lbl_precio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_pedido_precio" />
		
		<EditText
		    android:id="@+id/txt_precio"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="number"
		    android:singleLine="true" />
	</LinearLayout>	
    
	<Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />
	
    <TextView
		android:id="@+id/lbl_detalles"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/str_pedido_detalles" />
    
	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:stretchColumns="0,1"
		android:id="@+id/detalle" >
		<TableRow 
			android:id="@+id/TableRow01" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
			<TextView 
				android:id="@+id/TextView01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/str_pedido_producto"
				android:textStyle="bold"></TextView>
			<TextView 
				android:id="@+id/TextView02" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/str_pedido_cantidad"
				android:textStyle="bold"></TextView>
			<TextView 
				android:id="@+id/TextView03" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/str_pedido_precio"
				android:textStyle="bold"></TextView> 
			<TextView 
				android:id="@+id/TextView04" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/str_pedido_total"
				android:textStyle="bold"></TextView> 
		</TableRow>
	</TableLayout>

</LinearLayout>